更换基于yml格式的配置文件，使配置信息更清楚可观

--- a/BackEnd/managefront/pom.xml
+++ b/BackEnd/managefront/pom.xml
@@ -23,6 +23,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+<!--        全栈式的Web开发-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
