--- a/BackEnd/managefront/src/main/resources/application.yml
+++ b/BackEnd/managefront/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 8021
+
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/organizationsmanage?useUnicode=true&characterEncoding=utf-8&?serverTimezone=UTC
+    username: judy
+    password: 123456
+    type: com.alibaba.druid.pool.DruidDataSource
