--- a/BackEnd/managefront/pom.xml
+++ b/BackEnd/managefront/pom.xml
@@ -28,6 +28,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,6 +60,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+<!--            6.0版本以上驱动要使用com.mysql.cj.jdbc.Driver-->
             <version>8.0.19</version>
         </dependency>
 <!--        引入Lombok简化代码-->
@@ -77,7 +82,6 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.5</version>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -98,7 +102,6 @@
                         <version>8.0.19</version>
                     </dependency>
                 </dependencies>
-
                 <!--配置文件的位置-->
                 <configuration>
                     <configurationFile>${project.basedir}/src/main/resources/generatorConfig.xml</configurationFile>
@@ -107,6 +110,22 @@
                 </configuration>
             </plugin>
         </plugins>
+        <!--配置资源拷贝插件-->
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.yml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
