--- a/BackEnd/managefront/src/main/resources/application.yml
+++ b/BackEnd/managefront/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/organizationsmanage?useUnicode=true&characterEncoding=utf-8&?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/organizationsmanage?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
     username: judy
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
