--- a/FrontEnd/managefront/package.json
+++ b/FrontEnd/managefront/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
-    "axios": "latest"
+    "axios": "latest",
+    "qs": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
