--- a/BackEnd/managefront/src/main/resources/application.yml
+++ b/BackEnd/managefront/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     username: judy
     password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 100MB
